--- a/setup.cfg
+++ b/setup.cfg
@@ -14,12 +14,38 @@ replace = __version__ = '{new_version}'
 [bdist_wheel]
 universal = 1
 
-[flake8]
-exclude = docs
+[build_sphinx]
+source-dir = docs
+build-dir = docs/_build
+all_files = 1
 
-[aliases]
+[build_docs]
+source-dir = docs
+build-dir = docs/_build
+all_files = 1
+
+[upload_docs]
+upload-dir = docs/_build/html
+show-response = 1
+
+[pycodestyle]
+# E101 - mix of tabs and spaces
+# W191 - use of tabs
+# W291 - trailing whitespace
+# W292 - no newline at end of file
+# W293 - trailing whitespace
+# W391 - blank line at end of file
+# E111 - 4 spaces per indentation level
+# E112 - 4 spaces per indentation level
+# E113 - 4 spaces per indentation level
+# E901 - SyntaxError or IndentationError
+# E902 - IOError
+select = E101,W191,W291,W292,W293,W391,E111,E112,E113,E901,E902
+exclude = extern,sphinx,*parsetab.py
+
+#[aliases]
 # Define setup.py command aliases here
-test = pytest
+#test = pytest
 
 [tool:pytest]
 collect_ignore = ['setup.py']
