--- a/setup.cfg
+++ b/setup.cfg
@@ -28,6 +28,9 @@ all_files = 1
 upload-dir = docs/_build/html
 show-response = 1
 
+[ah_bootstrap]
+auto_use = True
+
 [pycodestyle]
 # E101 - mix of tabs and spaces
 # W191 - use of tabs
@@ -48,5 +51,28 @@ exclude = extern,sphinx,*parsetab.py
 #test = pytest
 
 [tool:pytest]
+minversion = 3.0
+norecursedirs = build docs/_build
+doctest_plus = enabled
+addopts = -p no:warnings
 collect_ignore = ['setup.py']
 
+
+[metadata]
+package_name = pyGRBz
+description = Bayesian photometric code dedicated to Gamma-Ray Burst
+long_description = Bayesian photometric code dedicated to Gamma-Ray Burst using affine-invariant Ensemble sampler and Parallel-Tempering Ensemble sampler of the python package emcee.
+author = David Corre
+author_email = david.corre.fr@gmail.com
+license = MIT license
+url = http://pygrbz.readthedocs.io/
+edit_on_github = False
+github_project = dcorre/pyGRBz
+# install_requires should be formatted as a comma-separated list, e.g.:
+#install_requires = astropy, scipy, matplotlib
+#install_requires = numpy, scipy, matplotlib, astropy
+install_requires = numpy, scipy, matplotlib, jupyter, astropy, iminuit, emcee, corner, sfdmap, extinction, hjson
+# version should be PEP386 compatible (http://www.python.org/dev/peps/pep-0386)
+version = 0.0.dev
+# Note: you will also need to change this in your package's __init__.py
+minimum_python_version = 3.5
